# Magnetic-Levitation

./: .gitignore  README.md  pyproject.toml  requirements.txt
Mathematical-Proof/: magnetic-fields-problem.tex
Mathematical-Proof/Answer-Keys/: problem1_solution.tex  problem2_solution_revised.tex  problem3_solution_relocked.tex  problem4_solution.tex  problem5_solution_patched.tex
configs/: controller.yaml  models.yaml  sim.yaml  ui.yaml
docs/: architecture.md  math_mapping.md  real_world_bridge.md  simulator_assumptions.md
outputs/: free_fall_summary.json  hover_demo_summary.json  induced_diagnose_summary.json  physical_limit_demo_summary.json  transfer_demo_summary.json  ui_screenshots_summary.json
references/: magnetic-fields-problem.tex  problem1_solution.tex  problem2_solution_revised.tex  problem3_solution_relocked.tex  problem4_solution.tex  problem5_solution_patched.tex
scripts/: capture_ui_screenshots.py  diagnose_induced_mode.py  run_force_map.py  run_hover_demo.py  run_physical_limit_demo.py  run_transfer_demo.py  run_ui.py
src/analysis/: __init__.py  config.py  export.py  linearization.py  logs.py  reachable_set.py  runtime.py  sampling.py
src/control/: __init__.py  allocator.py  outer_loop.py  physical_mode_guard.py  physical_targeting.py  pid.py  stabilizability_checks.py  trajectory_generator.py
tests/: conftest.py  test_induced_mode_safety.py  test_physical_targeting.py  test_problem1_mapping.py  test_problem2_linearization.py  test_problem3_regulation.py  test_problem4_tracking.py  test_problem5_limits.py  test_ui_smoke.py
(+23 files in other folders)
